fix get restaurantes botton with z-index css

--- a/src/Components/LocationSearchBar.css
+++ b/src/Components/LocationSearchBar.css
@@ -70,6 +70,7 @@
   justify-content: center;
   align-items: center;
   align-content: space-around;
+  z-index: 1;
 }
 
 ul.options {
@@ -85,6 +86,7 @@ ul.options {
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 ul.options li {
@@ -95,9 +97,9 @@ ul.options li {
   width: 100%;
   border-radius: 2px;
   text-align: left;
-
-
+  z-index: 3;
 }
+
 ul.options li:hover {
   background-color: #a6e1fa;
   cursor: pointer;
@@ -113,7 +115,7 @@ ul.options li.option-active {
   color: white;
 }
 
-.search-btn-container {
+/* .search-btn-container {
   background-color: rgb(92, 225, 230, 0.88);
   display: grid;
   justify-items: center;
@@ -144,7 +146,7 @@ ul.options li.option-active {
 .search-btn:focus {
   outline: none;
   opacity: 0.6;
-}
+} */
 
 .out-of-reach-p {
     padding: 50px;
