--- a/src/Components/data.css
+++ b/src/Components/data.css
@@ -11,7 +11,6 @@
   display: grid;
   justify-items: center;
   height: 15vh;
-  position: absolute;
 }
 
 .search-btn {
